--- a/package.json
+++ b/package.json
@@ -9,24 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.7",
     "@next/font": "13.1.6",
     "@types/lodash": "^4.14.191",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.0",
     "axios": "^1.2.6",
-    "lodash": "^4.17.21",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-infinite-loader": "^1.0.4",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-photo-gallery": "^8.0.0",
     "react-query": "^3.39.3",
+    "react-virtualized-auto-sizer": "^1.0.7",
+    "react-virtuoso": "^4.0.7",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.5",
     "uuid": "^9.0.0"
   },
